Servlet、Jsp、Cookieの管理の仕方の変更 Servletの継承関係を調整